Adding Sidebar improvement with CSS Grid and 'a' tags

--- a/index.html
+++ b/index.html
@@ -14,25 +14,27 @@
 
     <aside>
 
-        <div class="dashboard">
+        <div class="logo-and-title">
           <img class="logo" src="/media/dashboard-icon.svg" alt="dashboard-icon">
           <h1>Dashboard</h1>
         </div>
         
-        <ul class="menu-one">
-          <li><img class="icon" src="./media/home-icon.svg" alt="home-icon"> Home</li>
-          <li><img class="icon" src="./media/profile-icon.svg" alt="profile-icon">  Profile</li>
-          <li><img class="icon" src="./media/message-icon.svg" alt="message-icon">  Message</li>
-          <li><img class="icon" src="./media/history-icon.svg" alt="history-icon">  History</li>
-          <li><img class="icon" src="./media/tasks-icon.svg" alt="tasks-icon"> Task</li>
-          <li><img class="icon" src="./media/communities-icon.svg" alt="communities-icon"> Communities</li>
-        </ul>
+        <div class="menus">
+          <nav class="menu-one">
+            <a href="#"><img class="icon" src="./media/home-icon.svg" alt="home-icon"> Home</a>
+            <a href="#"><img class="icon" src="./media/profile-icon.svg" alt="profile-icon">  Profile</a>
+            <a href="#"><img class="icon" src="./media/message-icon.svg" alt="message-icon">  Message</a>
+            <a href="#"><img class="icon" src="./media/history-icon.svg" alt="history-icon">  History</a>
+            <a href="#"><img class="icon" src="./media/tasks-icon.svg" alt="tasks-icon"> Task</a>
+            <a href="#"><img class="icon" src="./media/communities-icon.svg" alt="communities-icon"> Communities</a>
+          </nav>
 
-        <ul class="menu-two">
-          <li><img class="icon" src="./media/settings-icon.svg" alt="settings-icon"> Settings</li>
-          <li><img class="icon" src="./media/support-icon.svg" alt="support-icon"> Support</li>
-          <li><img class="icon" src="./media/privacy-icon.svg" alt="privacy-icon"> Privacy</li>
-        </ul>
+          <nav class="menu-two">
+            <a href="#"><img class="icon" src="./media/settings-icon.svg" alt="settings-icon"> Settings</a>
+            <a href="#"><img class="icon" src="./media/support-icon.svg" alt="support-icon"> Support</a>
+            <a href="#"><img class="icon" src="./media/privacy-icon.svg" alt="privacy-icon"> Privacy</a>
+          </nav>
+        </div>  
     </aside>
 
     <header>
