--- a/index.html
+++ b/index.html
@@ -3,157 +3,230 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Dashboard TOP</title>
+  <title>Admin Page TOP</title>
+  <link rel="stylesheet" href="/reset.css">
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
 </head>
 <body>
+  <!-- Side bar -->
+  <div class="side-bar">
+    <div class="dashboard menu-icon">
+      <img src="/icons/view-dashboard.svg" alt="">
+      <h1>Dashboard</h1>
+    </div>
 
-  <div class="container">
-
-    <aside>
-
-        <div class="logo-and-title">
-          <img class="logo" src="/media/dashboard-icon.svg" alt="dashboard-icon">
-          <h1>Dashboard</h1>
-        </div>
-        
-        <div class="menus">
-          <nav class="menu-one">
-            <a href="#"><img class="icon" src="./media/home-icon.svg" alt="home-icon"> Home</a>
-            <a href="#"><img class="icon" src="./media/profile-icon.svg" alt="profile-icon">  Profile</a>
-            <a href="#"><img class="icon" src="./media/message-icon.svg" alt="message-icon">  Message</a>
-            <a href="#"><img class="icon" src="./media/history-icon.svg" alt="history-icon">  History</a>
-            <a href="#"><img class="icon" src="./media/tasks-icon.svg" alt="tasks-icon"> Task</a>
-            <a href="#"><img class="icon" src="./media/communities-icon.svg" alt="communities-icon"> Communities</a>
-          </nav>
-
-          <nav class="menu-two">
-            <a href="#"><img class="icon" src="./media/settings-icon.svg" alt="settings-icon"> Settings</a>
-            <a href="#"><img class="icon" src="./media/support-icon.svg" alt="support-icon"> Support</a>
-            <a href="#"><img class="icon" src="./media/privacy-icon.svg" alt="privacy-icon"> Privacy</a>
-          </nav>
-        </div>  
-    </aside>
-
-    <header>
-      <div class="upper-side">
-        <div class="search">
-          <button class="search"><img class="icon" src="./media/search-icon.svg" alt="search-icon"></i></button>
-          <input type="search">
-        </div>
-
-        <div class="notice">
-          <button class="search"><img class="icon" src="./media/bell-ring-icon.svg" alt="bell-ring-icon"></button>
-          <img class="logo-brand-sm" src="/media/computadora-portatil.png" alt="logo-brand">          <h2>Morgan Oakley</h2>
-        </div>
-      </div>
-
-      <div class="lower-side">
-        <div class="banner-side">
-          <img class="logo-brand" src="/media/computadora-portatil.png" alt="logo-brand">
-          <h4>Hi there,</h4>
-          <h2>Morgan Oakley (@morgan)</h2>
-        </div>
-
-        <div class="buttons">
-          <button type="button" class="btn">New</button>
-          <button type="button" class="btn">Upload</button>
-          <button type="button" class="btn">Share</button>
-        </div>
-      </div>
-    </header>
-
-    <main>
-      <div class="card-container">
-
-        <div class="card-title">
-          <p>Your Projects</p>
-        </div>
-
-        <div class="cards">
-          <div class="card">
-            <h3 class="title">Super Cool Project</h3>
-            <p class="text-card">Suspendisse nec dolor sit amet libero tempor egestas. Aliquam erat volutpat. Donec aliquet, nisi tincidunt luctus placerat, orci nibh hendrerit enim, vitae cursus lectus nisi sit amet tortor.</p>
-          </div>
-          <div class="card">
-            <h3 class="title">Less Cool Project</h3>
-            <p class="text-card">Aenean vel ornare elit. Aenean facilisis dapibus erat at sollicitudin. Vestibulum ornare, eros sed bibendum blandit, est nulla egestas nibh, sed hendrerit elit nisi quis ex. Donec hendrerit luctus ante quis dapibus.</p>
-          </div>
-          <div class="card">
-            <h3 class="title">Impossible App</h3>
-            <p class="text-card">Vestibulum lobortis dignissim odio non vulputate. Aenean nunc nibh, fermentum nec consectetur id, finibus sit amet mauris. Proin vel nunc nibh. Suspendisse potenti.</p>
-          </div>
-          <div class="card">
-            <h3 class="title">Easy Peasy App</h3>
-            <p class="text-card">Phasellus sollicitudin magna at dui ultricies, luctus porta odio ultricies. Nulla fringilla odio ipsum, sit amet molestie felis mattis pulvinar. Nunc ullamcorper, nisl at semper vulputate, ex ligula convallis leo, nec semper lacus metus ut erat. Curabitur ac est eu erat consequat finibus id et ex. Integer pellentesque maximus dui, at iaculis turpis pulvinar at.</p>
-          </div>
-          <div class="card">
-            <h3 class="title">Add Blocker</h3>
-            <p class="text-card">Curabitur ullamcorper sit amet lectus ornare fermentum. Fusce est eros, convallis at mollis ac, pellentesque vitae dolor. Integer viverra quis arcu sed fringilla. Duis ante arcu, mollis in aliquet molestie, eleifend id massa. Praesent suscipit malesuada lacinia.</p>
-          </div>
-          <div class="card">
-            <h3 class="title">Money Maker</h3>
-            <p class="text-card">Ut id odio sit amet dolor vestibulum porta. Pellentesque vulputate, diam in fermentum faucibus, sapien lorem auctor ipsum, ut pretium magna diam ac libero. Fusce porttitor congue risus ut venenatis.</p>
-          </div>
-        </div>
-
-      </div>
-
-      <div class="announcement-container">
-
-        <div class="announcement title">
-          <p>Announcement</p>
-        </div>
-
-        <div class="card-announcement">
-          <h3 class="title">Title</h3>
-          <p class="text">Quisque id nunc est. Aenean varius tortor sit amet enim feugiat, in rhoncus purus tincidunt. Morbi tristique molestie risus et imperdiet. Quisque scelerisque elementum massa nec efficitur.</p>
-          <hr>
-        </div>
-        <div class="card-announcement">
-          <h3 class="title">Title</h3>
-          <p class="text">Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Nam scelerisque cursus purus, at molestie ex posuere eu.</p>
-          <hr>
-        </div>
-        <div class="card-announcement">
-          <h3 class="title">Title</h3>
-          <p class="text">Aliquam vel urna eget tortor tincidunt euismod at quis mi. Morbi quis nunc ac velit varius aliquam at sit amet tortor. In a condimentum ante. Duis metus tortor, consectetur sed magna quis, lobortis eleifend dui. In non turpis nunc. </p>
-        </div>
-
-      </div>
-
-      <div class="trending-container">
-
-        <div class="trending-title">
-          <p>Trending</p>
-        </div>
-
-        <div class="card-trending">
-          <img class="logo-brand-sm" src="/media/computadora-portatil.png" alt="">
-          <p class="text">@tegan</p>
-          <p class="text">World Peace Bueilder</p>
-        </div>
-        <div class="card-trending">
-          <img class="logo-brand-sm" src="/media/computadora-portatil.png" alt="">
-          <p class="text">@morgan</p>
-          <p class="text">Super Cool Project</p>
-        </div>
-        <div class="card-announcement">
-          <img class="logo-brand-sm" src="/media/computadora-portatil.png" alt="">
-          <p class="text">@kendall</p>
-          <p class="text">Life Changing App</p>
-        </div>
-        <div class="card-announcement">
-          <img class="logo-brand-sm" src="/media/computadora-portatil.png" alt="">
-          <p class="text">@alex</p>
-          <p class="text">No Traffic Macker</p>
-        </div>
-
-      </div>
-
-    </main>
+    <div class="menu-icon">
+      <img src="/icons/home.svg" alt="">
+      <h1>Home</h1>
+    </div>
+    <div class="menu-icon">
+      <img src="/icons/card-account-details-outline.svg" alt="">
+      <h1>Profile</h1>
+    </div>
+    <div class="menu-icon">
+      <img src="/icons/message-reply.svg" alt="">
+      <h1>Messages</h1>
+    </div>
+    <div class="menu-icon">
+      <img src="/icons/clock-time-three.svg" alt="">
+      <h1>History</h1>
+    </div>
+    <div class="menu-icon">
+      <img src="/icons/note-multiple.svg" alt="">
+      <h1>Tasks</h1>
+    </div>
+    <div class="menu-icon">
+      <img src="/icons/account-group.svg" alt="">
+      <h1>Communities</h1>
+    </div>
+    <!-- Estra Space -->
+    <div class="menu-icon">
+      <img src="/icons/cog.svg" alt="">
+      <h1>Settings</h1>
+    </div>
+    <div class="menu-icon">
+      <img src="/icons/help-box.svg" alt="">
+      <h1>Support</h1>
+    </div>
+    <div class="menu-icon">
+      <img src="/icons/shield-check.svg" alt="">
+      <h1>Privacy</h1>
+    </div>
   </div>
+
+  <!-- Header -->
+  <div class="header">
+    <!-- Top Section -->
+    <div class="top-header">
+      <!-- Search icon & Search bar -->
+      <div class="search">
+        <div class="menu-icon">
+          <img src="./icons/magnify.svg" alt="">
+        </div>
+        <input type="text" name="search" autocomplete="off">
+      </div>
+      <div class="account">
+        <div class="menu-icon">
+          <img src="/icons/bell-ring-outline.svg" alt="">
+        </div>
+        <div class="gh-avatar">
+          <img src="" alt="">
+        </div>
+        <p class="name">AndresDev28</p>
+      </div>
+    </div>
+
+    <!-- Botton Section -->
+    <div class="botton-header">
+      <!-- Profile details -->
+      <div class="profile">
+        <div class="gh-avatar">
+          <img src="" alt="">
+        </div>
+        <div class="profile-name">
+          <p class="greeting">Hi there,</p>
+          <p class="name">AndresDev28 <span class="username">(@andres)</span></p>
+        </div>
+      </div>
+      <!-- Buttons section -->
+      <div class="buttons">
+        <button class="btn">New</button>
+        <button class="btn">Upload</button>
+        <button class="btn">Share</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Main content -->
+  <main class="content">
+    <div class="projects">
+      <h3>Your Projects</h3>
+      <!-- Section with all proyect cards -->
+      <div class="card-projects">
+        <!-- 6 individual cards -->
+        <div class="card">
+          <h5 class="card-title">Super Cool Project</h5>
+          <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A dolorem deserunt debitis tenetur esse neque, impedit dolorum beatae sit quae, consectetur.</p>
+          <div class="icons">
+            <img src="/icons/star-plus-outline.svg" alt="">
+            <img src="/icons/eye-plus-outline.svg" alt="">
+            <img src="/icons/source-branch.svg" alt="">
+          </div>
+        </div>
+        <div class="card">
+          <h5 class="card-title">Less Cool Project</h5>
+          <p class="card-text">Nemo provident officiis qui dolor. Iure ut quidem qui aspernatur consequuntur a provident nulla sunt. Voluptatibus soluta odio accusamus maxime recusandae quos!.</p>
+          <div class="icons">
+            <img src="/icons/star-plus-outline.svg" alt="">
+            <img src="/icons/eye-plus-outline.svg" alt="">
+            <img src="/icons/source-branch.svg" alt="">
+          </div>
+        </div>
+        <div class="card">
+          <h5 class="card-title">Impossible App</h5>
+          <p class="card-text">Facilis voluptatum nam consequatur laborum quaerat mollitia, sunt aliquam alias excepturi debitis velit sit eligendi placeat sapiente magni? Minima eaque debitis ducimus?</p>
+          <div class="icons">
+            <img src="/icons/star-plus-outline.svg" alt="">
+            <img src="/icons/eye-plus-outline.svg" alt="">
+            <img src="/icons/source-branch.svg" alt="">
+          </div>
+        </div>
+        <div class="card">
+          <h5 class="card-title">Easy Peasy App</h5>
+          <p class="card-text">Enim incidunt quo voluptatem fugiat libero consequatur, quisquam qui dolorum odio earum harum repudiandae perspiciatis magnam, voluptas mollitia adipisci fuga, cumque sed.</p>
+          <div class="icons">
+            <img src="/icons/star-plus-outline.svg" alt="">
+            <img src="/icons/eye-plus-outline.svg" alt="">
+            <img src="/icons/source-branch.svg" alt="">
+          </div>
+        </div>
+        <div class="card">
+          <h5 class="card-title">Ad Blocker</h5>
+          <p class="card-text">Odio, veniam. Accusamus obcaecati, molestias enim deleniti rerum recusandae id explicabo porro quae at corrupti, quasi reprehenderit corporis deserunt voluptas suscipit nobis?</p>
+          <div class="icons">
+            <img src="/icons/star-plus-outline.svg" alt="">
+            <img src="/icons/eye-plus-outline.svg" alt="">
+            <img src="/icons/source-branch.svg" alt="">
+          </div>
+        </div>
+        <div class="card">
+          <h5 class="card-title">Money Maker</h5>
+          <p class="card-text">Deleniti, nobis. Repudiandae ullam sit ex quia quas nobis. Quas, cum repellat aut officiis dignissimos molestias ab enim dolor sed consequuntur nobis!</p>
+          <div class="icons">
+            <img src="/icons/star-plus-outline.svg" alt="">
+            <img src="/icons/eye-plus-outline.svg" alt="">
+            <img src="/icons/source-branch.svg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Side content - Announcements & Trending -->
+    
+    <!-- Announcements -->
+    <div class="announcements">
+      <h3>Announcements</h3>
+      <ul class="card">
+        <!-- List of individual announcements  -->
+        <li class="announcement">
+          <h5 class="card-title">Site Maintenance</h5>
+          <p class="card-text">Expedita aspernatur maiores enim soluta esse praesentium et similique illo culpa beatae, doloremque, excepturi temporibus ipsam repellendus fugit labore ex iure alias!</p>
+          <hr class="line">
+        </li>
+        <li class="announcement">
+          <h5 class="card-title">Community Share Day</h5>
+          <p class="card-text">Assumenda obcaecati placeat quam optio magni, accusantium reiciendis iste at, voluptate saepe eum repellendus hic quasi ex repudiandae ipsa odit modi mollitia!!</p>
+          <hr class="line">
+        </li>
+        <li class="announcement">
+          <h5 class="card-title">Updated Privacy Policy</h5>
+          <p class="card-text">Aut atque in voluptate eum non asperiores, enim assumenda, optio impedit veniam sed minus magnam fugiat! Nulla doloribus asperiores praesentium enim porro!</p>
+        </li>
+      </ul>
+    </div>
+
+    <!-- Trending -->
+    <div class="trending">
+      <h3>Trending</h3>
+      <ul class="card">
+        <!-- List of trend people -->
+        <li class="trend trend-1">
+          <div class="gh-avatar-trend">
+            <img src="https://cdn-icons-png.flaticon.com/512/4494/4494688.png" alt="">
+          </div>
+          <div class="account-trend">
+            <p class="username">@tegan</p>
+            <p class="trending-text">World Peace Builder</p>
+          </div>
+        </li>
+        <li class="trend trend-2">
+          <div class="gh-avatar-trend">
+            <img src="https://cdn-learn.adafruit.com/guides/cropped_images/000/003/613/medium640/Fancy_Octocat_guide_image.png?1654629455" alt="">
+          </div>
+          <div class="account-trend">
+            <p class="username">@morgan</p>
+            <p class="trending-text">Super Cool Project</p>
+          </div>
+        </li>
+        <li class="trend trend-3">
+          <div class="gh-avatar-trend">
+            <img src="https://png.pngtree.com/thumb_back/fh260/background/20230611/pngtree-screenshotsaturday-image_2937739.jpg" alt="">
+          </div>
+          <div class="account-trend">
+            <p class="username">@kendall</p>
+            <p class="trending-text">Life Changing App</p>
+          </div>
+        </li>
+        <li class="trend trend-4">
+          <div class="gh-avatar-trend">
+            <img src="https://pics.craiyon.com/2023-11-30/UR6J7evmR0GcshAR6HT5rA.webp" alt="">
+          </div>
+          <div class="account-trend">
+            <p class="username">@alex</p>
+            <p class="trending-text">No traffic Maker</p>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </main>
 </body>
 </html>
