--- a/index.html
+++ b/index.html
@@ -11,45 +11,45 @@
   <!-- Side bar -->
   <div class="side-bar">
     <div class="dashboard menu-icon">
-      <img src="/icons/view-dashboard.svg" alt="">
+      <img src="./icons/view-dashboard.svg" alt="">
       <h1>Dashboard</h1>
     </div>
 
     <div class="menu-icon">
-      <img src="/icons/home.svg" alt="">
+      <img src="./icons/home.svg" alt="">
       <h1>Home</h1>
     </div>
     <div class="menu-icon">
-      <img src="/icons/card-account-details-outline.svg" alt="">
+      <img src="./icons/card-account-details-outline.svg" alt="">
       <h1>Profile</h1>
     </div>
     <div class="menu-icon">
-      <img src="/icons/message-reply.svg" alt="">
+      <img src="./icons/message-reply.svg" alt="">
       <h1>Messages</h1>
     </div>
     <div class="menu-icon">
-      <img src="/icons/clock-time-three.svg" alt="">
+      <img src="./icons/clock-time-three.svg" alt="">
       <h1>History</h1>
     </div>
     <div class="menu-icon">
-      <img src="/icons/note-multiple.svg" alt="">
+      <img src="./icons/note-multiple.svg" alt="">
       <h1>Tasks</h1>
     </div>
     <div class="menu-icon">
-      <img src="/icons/account-group.svg" alt="">
+      <img src="./icons/account-group.svg" alt="">
       <h1>Communities</h1>
     </div>
     <!-- Estra Space -->
     <div class="menu-icon">
-      <img src="/icons/cog.svg" alt="">
+      <img src="./icons/cog.svg" alt="">
       <h1>Settings</h1>
     </div>
     <div class="menu-icon">
-      <img src="/icons/help-box.svg" alt="">
+      <img src="./icons/help-box.svg" alt="">
       <h1>Support</h1>
     </div>
     <div class="menu-icon">
-      <img src="/icons/shield-check.svg" alt="">
+      <img src="./icons/shield-check.svg" alt="">
       <h1>Privacy</h1>
     </div>
   </div>
@@ -67,7 +67,7 @@
       </div>
       <div class="account">
         <div class="menu-icon">
-          <img src="/icons/bell-ring-outline.svg" alt="">
+          <img src="./icons/bell-ring-outline.svg" alt="">
         </div>
         <div class="gh-avatar">
           <img src="" alt="">
@@ -108,54 +108,54 @@
           <h5 class="card-title">Super Cool Project</h5>
           <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. A dolorem deserunt debitis tenetur esse neque, impedit dolorum beatae sit quae, consectetur.</p>
           <div class="icons">
-            <img src="/icons/star-plus-outline.svg" alt="">
-            <img src="/icons/eye-plus-outline.svg" alt="">
-            <img src="/icons/source-branch.svg" alt="">
+            <img src="./icons/star-plus-outline.svg" alt="">
+            <img src="./icons/eye-plus-outline.svg" alt="">
+            <img src="./icons/source-branch.svg" alt="">
           </div>
         </div>
         <div class="card">
           <h5 class="card-title">Less Cool Project</h5>
           <p class="card-text">Nemo provident officiis qui dolor. Iure ut quidem qui aspernatur consequuntur a provident nulla sunt. Voluptatibus soluta odio accusamus maxime recusandae quos!.</p>
           <div class="icons">
-            <img src="/icons/star-plus-outline.svg" alt="">
-            <img src="/icons/eye-plus-outline.svg" alt="">
-            <img src="/icons/source-branch.svg" alt="">
+            <img src="./icons/star-plus-outline.svg" alt="">
+            <img src="./icons/eye-plus-outline.svg" alt="">
+            <img src="./icons/source-branch.svg" alt="">
           </div>
         </div>
         <div class="card">
           <h5 class="card-title">Impossible App</h5>
           <p class="card-text">Facilis voluptatum nam consequatur laborum quaerat mollitia, sunt aliquam alias excepturi debitis velit sit eligendi placeat sapiente magni? Minima eaque debitis ducimus?</p>
           <div class="icons">
-            <img src="/icons/star-plus-outline.svg" alt="">
-            <img src="/icons/eye-plus-outline.svg" alt="">
-            <img src="/icons/source-branch.svg" alt="">
+            <img src="./icons/star-plus-outline.svg" alt="">
+            <img src="./icons/eye-plus-outline.svg" alt="">
+            <img src="./icons/source-branch.svg" alt="">
           </div>
         </div>
         <div class="card">
           <h5 class="card-title">Easy Peasy App</h5>
           <p class="card-text">Enim incidunt quo voluptatem fugiat libero consequatur, quisquam qui dolorum odio earum harum repudiandae perspiciatis magnam, voluptas mollitia adipisci fuga, cumque sed.</p>
           <div class="icons">
-            <img src="/icons/star-plus-outline.svg" alt="">
-            <img src="/icons/eye-plus-outline.svg" alt="">
-            <img src="/icons/source-branch.svg" alt="">
+            <img src="./icons/star-plus-outline.svg" alt="">
+            <img src="./icons/eye-plus-outline.svg" alt="">
+            <img src="./icons/source-branch.svg" alt="">
           </div>
         </div>
         <div class="card">
           <h5 class="card-title">Ad Blocker</h5>
           <p class="card-text">Odio, veniam. Accusamus obcaecati, molestias enim deleniti rerum recusandae id explicabo porro quae at corrupti, quasi reprehenderit corporis deserunt voluptas suscipit nobis?</p>
           <div class="icons">
-            <img src="/icons/star-plus-outline.svg" alt="">
-            <img src="/icons/eye-plus-outline.svg" alt="">
-            <img src="/icons/source-branch.svg" alt="">
+            <img src="./icons/star-plus-outline.svg" alt="">
+            <img src="./icons/eye-plus-outline.svg" alt="">
+            <img src="./icons/source-branch.svg" alt="">
           </div>
         </div>
         <div class="card">
           <h5 class="card-title">Money Maker</h5>
           <p class="card-text">Deleniti, nobis. Repudiandae ullam sit ex quia quas nobis. Quas, cum repellat aut officiis dignissimos molestias ab enim dolor sed consequuntur nobis!</p>
           <div class="icons">
-            <img src="/icons/star-plus-outline.svg" alt="">
-            <img src="/icons/eye-plus-outline.svg" alt="">
-            <img src="/icons/source-branch.svg" alt="">
+            <img src="./icons/star-plus-outline.svg" alt="">
+            <img src="./icons/eye-plus-outline.svg" alt="">
+            <img src="./icons/source-branch.svg" alt="">
           </div>
         </div>
       </div>
